fix: modify useless vvalue of a class

--- a/recettes.html
+++ b/recettes.html
@@ -12,7 +12,7 @@
     <h2>Résumé</h2>
     <p>La pâte : 5 minutes</p>
     <p>Cuisson : 10 minutes</p>
-    <p><span class="bold red">Difficulté</span> : facile, <span class="normal red">Budget</span> : €--</p>
+    <p><span class="bold red">Difficulté</span> : facile, <span class="red">Budget</span> : €--</p>
     <h2>Préparation</h2>
     <h3>Ustensiles</h3>
     <ul>
@@ -37,7 +37,7 @@
     <ol>
         <li>dans le mug, mélanger farine, sucre et levure</li>
         <li>Réserver dans un saladier</li>
-        <li>de nouveau dans le mug : <span class="normal red">bien mélanger l'oeuf et l'huile</span> puis ajouter le lait</li>
+        <li>de nouveau dans le mug : <span class="red">bien mélanger l'oeuf et l'huile</span> puis ajouter le lait</li>
         <li>verser <span class="bold red">progressivement</span> le contenu du mug dans le saladier en <span class="bold red">mélangeant énergiquement</span></li>
         <li>c'est prêt</li>
     </ol>
