--- a/recettes.html
+++ b/recettes.html
@@ -9,16 +9,17 @@
 </head>
 <body>
     <h1>1 mug pancakes</h1>
+    <img src="https://images.unsplash.com/photo-1528207776546-365bb710ee93?fit=crop&w=600" alt="pancakes_on_a_plate">
     <h2>Résumé</h2>
-    <p>La pâte : 5 minutes</p>
-    <p>Cuisson : 10 minutes</p>
+    <p><a href="https://www.unamourdecrepe.com/categorie-produit/la-boutique/">La pâte</a> : 5 minutes</p>
+    <p><a href="https://www.meilleurduchef.com/fr/recette/pancake.html">Cuisson</a> : 10 minutes</p>
     <p><span class="bold red">Difficulté</span> : facile, <span class="red">Budget</span> : €--</p>
     <h2>Préparation</h2>
     <h3>Ustensiles</h3>
     <ul>
-        <li>1 mug (env. 35cl)</li>
+        <li>1 <a href="https://www.etsy.com/fr/listing/1390453038/pancake-loverpankcake-dayfunny-pancake?gpla=1&gao=1&&utm_source=google&utm_medium=cpc&utm_campaign=shopping_fr_fr_fr_e-home_and_living-kitchen_and_dining-drink_and_barware-drinkware-mugs&utm_custom1=_k_Cj0KCQjwla-hBhD7ARIsAM9tQKt7-IUA4NuB6U9_yEHrQ2ha4YneCyQlbcVRwtATL_74spplCmgFwhEaArc0EALw_wcB_k_&utm_content=go_304982059_49103019995_230600340463_pla-498657395952_c__1390453038frfr_102857959&utm_custom2=304982059&gclid=Cj0KCQjwla-hBhD7ARIsAM9tQKt7-IUA4NuB6U9_yEHrQ2ha4YneCyQlbcVRwtATL_74spplCmgFwhEaArc0EALw_wcB">mug</a> (env. 35cl)</li>
         <li>1 saladier</li>
-        <li>1 petites crêpière ou 1 poêle</li>
+        <li>1 <a href="https://www.darty.com/nav/achat/petit_electromenager/cuisson_conviviale/crepiere/index.html">petite crêpière</a> ou 1 poêle</li>
         <li>1 cuillère à soupe</li>
         <li>1 fourchette ou 1 fouet</li>
     </ul>
