--- a/recettes.html
+++ b/recettes.html
@@ -33,6 +33,7 @@
         <li>2 cuillères soupe d'huile</li>
         <li>2 cuillères soupe de sucre</li>
     </ul>
+    <p class="tricks">Astuce : Vous n'avez pas d'oeuf ? Incorporer un peu de banane écrasée dans la préparation.</p>
     <h2>Instructions</h2>
     <h3>La pâte</h3>
     <ol>
@@ -47,7 +48,9 @@
         Idéalement sur une petite crêpière, verser simplement la quantité de pâte souhaitée. Laisser cuire jusqu'à l'apparition de petites bulles sur le dessus du pancake puis retourner
     </p>
     <p>A la poêle, même principe à feu doux</p>
+    <p class="tricks">Astuce : Ajouter un petit bout de beurre à fondre sur la pile de pancakes, un régal.</p>
     <h2>Dégustation</h2>
     <p>Parfait avec un peu de beurre de cacahuète, avec une bonne confiture ou tout simplement avec un peu de sucre</p>
+    <p class="tricks">Astuce : Si vous n'avez pas d'accompagnement en tête, verser un peu de sirop d'érable avant de servir.</p>
 </body>
 </html>
